--- a/ECSlidingViewController/iPhone.storyboard
+++ b/ECSlidingViewController/iPhone.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11D50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="H2v-Ob-DhD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="12B19" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="H2v-Ob-DhD">
     <dependencies>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
+        <deployment defaultVersion="1296" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
+        <!--Menu View Controller-->
         <scene sceneID="cNz-He-b4Z">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Zx-U8-fIp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -40,6 +41,7 @@
             </objects>
             <point key="canvasLocation" x="-252" y="-287"/>
         </scene>
+        <!--Third Top View Controller-->
         <scene sceneID="jdT-tJ-z4E">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zjz-eV-f99" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -68,6 +70,7 @@
             </objects>
             <point key="canvasLocation" x="216" y="-1588"/>
         </scene>
+        <!--Navigation Top View Controller-->
         <scene sceneID="SXt-FO-RZE">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yWu-gf-oQs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -82,6 +85,7 @@
             </objects>
             <point key="canvasLocation" x="216" y="-2246"/>
         </scene>
+        <!--Sample Table View Controller - Navigation-->
         <scene sceneID="Yq6-PB-2Ba">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l3b-ql-eKa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -120,6 +124,7 @@
             </objects>
             <point key="canvasLocation" x="678" y="-2246"/>
         </scene>
+        <!--View Controller-->
         <scene sceneID="cSZ-Fj-saR">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="loh-8u-rWN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -134,6 +139,7 @@
             </objects>
             <point key="canvasLocation" x="1150" y="-2246"/>
         </scene>
+        <!--Second Top View Controller-->
         <scene sceneID="dCa-Xc-F9L">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7AE-EV-BdB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -162,6 +168,7 @@
             </objects>
             <point key="canvasLocation" x="216" y="-942"/>
         </scene>
+        <!--First Top View Controller-->
         <scene sceneID="FCi-rO-pkm">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="opW-8m-5uU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -188,6 +195,21 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="flV-gb-hLD">
+                                <rect key="frame" x="228" y="403" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Modal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showModal:" destination="fYD-9N-EQW" eventType="touchUpInside" id="By4-80-6PO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -195,6 +217,38 @@
             </objects>
             <point key="canvasLocation" x="216" y="-286"/>
         </scene>
+        <!--Modal View Controller-->
+        <scene sceneID="9ac-Nw-KyW">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NeC-aC-vsR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="Modal" id="SAf-5d-i7x" customClass="ModalViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="diU-pt-J76">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xYX-cp-wc2">
+                                <rect key="frame" x="100" y="175" width="121" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Hide Modal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="hideModal:" destination="SAf-5d-i7x" eventType="touchUpInside" id="aky-ak-udC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="216" y="286"/>
+        </scene>
+        <!--Under Right View Controller-->
         <scene sceneID="kzo-vV-v3D">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wZR-cS-BX4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -243,6 +297,7 @@
             </objects>
             <point key="canvasLocation" x="678" y="-287"/>
         </scene>
+        <!--Initial Sliding View Controller-->
         <scene sceneID="OC6-i3-9aC">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BIB-pv-C48" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -266,6 +321,7 @@
             <relationships>
                 <relationship kind="action" name="revealMenu:"/>
                 <relationship kind="action" name="revealUnderRight:"/>
+                <relationship kind="action" name="showModal:"/>
             </relationships>
         </class>
         <class className="InitialSlidingViewController" superclassName="ECSlidingViewController">
@@ -273,6 +329,12 @@
         </class>
         <class className="MenuViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MenuViewController.h"/>
+        </class>
+        <class className="ModalViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ModalViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="hideModal:"/>
+            </relationships>
         </class>
         <class className="NavigationTopViewController" superclassName="UINavigationController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NavigationTopViewController.h"/>
